--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "main": "node index.js",
-    "debug": "node index.js --verbose"
+    "debug": "node index.js --verbose",
+    "bundle": "node scripts/create-bundle.js"
   },
   "keywords": [],
   "author": "",
@@ -17,5 +18,9 @@
     "date-fns": "^4.1.0",
     "lodash-es": "^4.17.21",
     "ora": "^8.2.0"
+  },
+  "devDependencies": {
+    "glob": "^11.0.3",
+    "ignore": "^7.0.5"
   }
 }
