--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "main": "node index.js",
     "debug": "node index.js --verbose",
-    "bundle": "node scripts/create-bundle.js"
+    "bundle": "node scripts/create-bundle.js",
+    "summer": "node summer.js"
   },
   "keywords": [],
   "author": "",
