--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "chalk": "^5.5.0",
+    "cli-table3": "^0.6.5",
     "csv": "^6.4.1",
     "date-fns": "^4.1.0",
     "dotenv": "^17.2.1",
